hard-gists/1023456/run.log
=== Docker Run Log for 1023456 ===
Started at: Mi 29. Okt 11:45:11 CET 2025

[2025-10-29 11:45:11] START: Running container for 1023456
[2025-10-29 11:45:11] SUCCESS: Container e1af8237963c18dc51ee169ec3818ed6302cd353a4f1f26bc71c09eb248530f3 started for 1023456
=== Container logs for 1023456 ===
  File "/snippet.py", line 8
    print "position mouse where you want"
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 1023456 ===
[2025-10-29 11:45:13] INFO: Container e1af8237963c18dc51ee169ec3818ed6302cd353a4f1f26bc71c09eb248530f3 has stopped
